syntax = "proto2";
package message.store;
message WholesalerRequest
{
	repeated int64 wholesaler_id = 1;
	repeated int64 store_id = 2;
}